[gd_scene load_steps=6 format=3 uid="uid://k02njswhg7iq"]

[ext_resource type="Script" path="res://Project_Lagrange/command_system3/if_button.gd" id="1_hbwaf"]
[ext_resource type="Texture2D" uid="uid://dipujxhgqd5xd" path="res://icon.svg" id="2_ecc7t"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_q2qcl"]
size = Vector2(204, 53)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_e1owj"]
size = Vector2(203, 27)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_tlxbd"]
size = Vector2(206, 26)

[node name="If_button" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_hbwaf")

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_right = 195.0
offset_bottom = 45.0
theme_override_font_sizes/font_size = 32
text = "If {
"
horizontal_alignment = 1

[node name="functions" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="functions"]
position = Vector2(92, 18.5)
shape = SubResource("RectangleShape2D_q2qcl")

[node name="link_up" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="link_up"]
position = Vector2(94, -30)
shape = SubResource("RectangleShape2D_e1owj")

[node name="link_down" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="link_down"]
position = Vector2(91, 63)
shape = SubResource("RectangleShape2D_tlxbd")

[node name="linkup" type="Sprite2D" parent="."]
visible = false
modulate = Color(0.564706, 0.933333, 0.564706, 1)
position = Vector2(-21, 0)
scale = Vector2(0.1, 0.1)
texture = ExtResource("2_ecc7t")

[node name="linkdown" type="Sprite2D" parent="."]
visible = false
modulate = Color(0.564706, 0.933333, 0.564706, 1)
position = Vector2(-21, 35)
scale = Vector2(0.1, 0.1)
texture = ExtResource("2_ecc7t")

[connection signal="mouse_entered" from="functions" to="." method="_on_functions_mouse_entered"]
[connection signal="mouse_exited" from="functions" to="." method="_on_functions_mouse_exited"]
[connection signal="area_entered" from="link_up" to="." method="_on_link_up_area_entered"]
[connection signal="area_exited" from="link_up" to="." method="_on_link_up_area_exited"]
[connection signal="area_entered" from="link_down" to="." method="_on_link_down_area_entered"]
[connection signal="area_exited" from="link_down" to="." method="_on_link_down_area_exited"]
